--- a/README
+++ b/README
@@ -2892,7 +2892,7 @@ Low Level (hardware related) configuration options:
 		globally (CONFIG_CMD_MEM).
 
 - CONFIG_SKIP_LOWLEVEL_INIT
-		[ARM only] If this variable is defined, then certain
+		If this variable is defined, then certain
 		low level initializations (like setting up the memory
 		controller) are omitted and/or U-Boot does not
 		relocate itself into RAM.
@@ -2901,6 +2901,12 @@ Low Level (hardware related) configuration options:
 		exception is when U-Boot is loaded (to RAM) by some
 		other boot loader or by a debugger which performs
 		these initializations itself.
+
+- CONFIG_SKIP_CPU_INIT_CRIT
+		[ARM only] If this variable is defined, then the CPU
+		is assumed to be initialized when U-Boot starts. For
+		most CPUs this also implies low level initialization
+		is skipped (see CONFIG_SKIP_LOWLEVEL_INIT).
 
 - CONFIG_PRELOADER
 		Modifies the behaviour of start.S when compiling a loader
